--- a/assets/css/hintr.css
+++ b/assets/css/hintr.css
@@ -7,6 +7,8 @@ ul.hintr {
   font-size: inherit;
   list-style: none;
   margin: 0;
+  max-height: 150px;
+  overflow-y: auto;
   padding: .25rem 0;
   position: absolute;
   width: 100%;
