--- a/assets/css/hintr-admin.css
+++ b/assets/css/hintr-admin.css
@@ -45,9 +45,11 @@
 .hintr-form-group .description {
   margin-top: 1rem;
 }
-.hintr-form-group .hintr-label {
+.hintr-form-group .hintr-label,
+.hintr-form-group label {
+  display: block;
   font-weight: bold;
-  margin-bottom: .75rem;
+  margin-bottom: .5rem;
 }
 .hintr-checkboxes {
   display: flex;
