--- a/assets/css/hintr.css
+++ b/assets/css/hintr.css
@@ -10,7 +10,7 @@ ul.hintr {
   max-height: 150px;
   overflow-y: auto;
   padding: .25rem 0;
-  position: absolute;
+  position: fixed;
   width: 100%;
   z-index: 1;
 }
